###############################################################################
###############################################################################
##
##  Copyright (C) 2009-2021 Red Hat, Inc.
##  
##  This copyrighted material is made available to anyone wishing to use,
##  modify, copy, or redistribute it subject to the terms and conditions
##  of the GNU General Public License v.2.
##
###############################################################################
###############################################################################

MAINTAINERCLEANFILES	= Makefile.in

dist_man8_MANS 		= fence_virt.8 fence_xvm.8 fence_virtd.8
dist_man5_MANS 		= fence_virt.conf.5
